fixed hero image text alignment, finished footer

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,3 +1,28 @@
 .footer {
   background: darkcyan;
+  text-align: center;
+  padding: 64px 0;
+}
+
+.footer-logo {
+  margin-bottom: 24px;
+  font-family: 'Barlow', sans-serif;
+  color: darkgreen;
+}
+
+.footerlink {
+  text-decoration: none;
+  color: darkseagreen;
+}
+
+.footericon{
+  margin: 0 12px;
+}
+
+.navigation {
+ display: flex;
+ justify-content: space-evenly;
+ margin-bottom: 48px;
+ text-decoration: none;
+ font-family: 'Barlow', sans-serif;
 }
