--- a/styles/hero-image.css
+++ b/styles/hero-image.css
@@ -2,23 +2,8 @@ body, html {
   height: 100%;
 }
 
-/* The hero image
-.hero-image {
-background-image: url(../images/desktop/image-header.jpg);
-
-/* Set a specific height */
-/* height: 100vh;
-z-index : 1000; */
-
-/* Position and center the image to scale nicely on all screens */
-/* background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
-} */
-
 /* Place text in the middle of the image */
-.hero-title, .hero-img {
+/* .hero-title {
 text-align: center;
 position: absolute;
 top: 50%;
@@ -28,22 +13,28 @@ color: white;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
-}
+} */
 
 .hero-title {
   font-family: 'Fraunces', serif;
   font-size: 64px;
   font-style: bold;
-  margin-bottom: 64px;
+  margin-top: 120px;
   color: white;
+  position: absolute;
+  text-align: center;
 }
 
 .hero-img {
-  margin-bottom: 120px;
+  bottom: 200px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 66.5%;
+  left: 50%;
 }
 
 .bg_img {
-  background-image: url(../images/desktop/image-header.jpg);
+  background-image: url(../images/mobile/image-header.jpg);
 
 /* Set a specific height */
   height: 100vh;
@@ -53,4 +44,10 @@ justify-content: space-between;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+}
+
+@media (max-width: 376px) {
+  .hero-title {
+    font-size: 48px;
+  }
 }
