--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -5,7 +5,7 @@
   background-color: transparent;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-lewagon, .navbar-collapse {
   flex-grow: 0;
 }
 
@@ -15,7 +15,7 @@
   color: white;
 }
 
-.nav-link {
+/* .nav-link {
   margin-right: 32px;
   color: rgb(255 255 255);
 }
@@ -28,7 +28,7 @@
   text-transform: uppercase;
   padding-left: 24px;
   padding-right: 24px;
-}
+} */
 
 .navbar-nav .nav-link {
   color: white;
